--- a/packages/next-typegen/package.json
+++ b/packages/next-typegen/package.json
@@ -3,23 +3,26 @@
   "version": "0.0.0",
   "private": true,
   "author": "wooseongDev <wooseong.dev@gmail.com>",
+  "license": "MIT",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
+    "./package.json": "./package.json",
     ".": {
-      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.cjs"
     }
   },
   "scripts": {
-    "build": "tsup"
+    "build": "tsup",
+    "check-exports": "attw --pack ."
   },
   "dependencies": {
     "tsup": "^8.4.0"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.17.4",
     "@hono-next-utils/eslint-config": "workspace:*",
     "@hono-next-utils/tsconfig": "workspace:*",
     "@types/node": "^20",
