--- a/packages/next-typegen/package.json
+++ b/packages/next-typegen/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@hono-next-utils/next-typegen",
-  "version": "0.0.0",
-  "private": true,
+  "version": "0.0.1",
   "author": "wooseongDev <wooseong.dev@gmail.com>",
   "license": "MIT",
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org",
+    "access": "public"
+  },
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -25,7 +28,6 @@
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.17.4",
     "@hono-next-utils/eslint-config": "workspace:*",
-    "@hono-next-utils/tsconfig": "workspace:*",
     "@types/node": "^20",
     "next": "15.2.4",
     "typescript": "5.8.2",
