fix: move tsconfig to root

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "echo": "echo 'Hello, world!'"
+    "local-release": "changeset version && changeset publish"
   },
   "devDependencies": {
     "@changesets/cli": "^2.28.1",
