--- a/packages/next-typegen/tsconfig.json
+++ b/packages/next-typegen/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "extends": "@hono-next-utils/tsconfig/base.json",
+  "extends": "../../tsconfig.base.json",
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
