chore: remove unused script

--- a/packages/next-typegen/package.json
+++ b/packages/next-typegen/package.json
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "build": "tsup",
-    "check-exports": "attw --pack .",
-    "local-release": "changeset version && changeset publish"
+    "check-exports": "attw --pack ."
   },
   "dependencies": {
     "tsup": "^8.4.0"
